# amazon-price-extractor

./: .flake8  .gitignore  README.md  pyproject.toml
amazon_product_extractor/: product_selector.py  scrapper.py  validator.py
amazon_product_extractor/model/: product.py  selector_schema.py
tests/: test_amazon_scrapper.py  test_validator.py
