[tool.poetry]
name = "amazon-product-extractor"
version = "0.1.0"
description = "Extracts product detail from amazon"
authors = ["Srijan Mukherjee <emailofsrijan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
